# agent-data-analyst-stream-chainlit

./: .env.sample  .gitignore  README.md  app.legacy.py  app.py  pyproject.toml
.chainlit/: config.toml
data/: synthetic_business_data.csv  synthetic_metadata.json
